# aioarxiv

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/build-api-doc/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: build-docs.yml  codecov.yml  codeql.yml  pyright.yml  release.yml  ruff.yml  website-deploy.yml  website-preview.yml
Writerside/: a.tree  c.list
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: Installation-guide.md  starter.md
aioarxiv/client/: arxiv_client.py
aioarxiv/models/: __init__.py
aioarxiv/utils/: arxiv_parser.py  log.py  rate_limiter.py  session.py
docs/: a.tree  redirection-rules.xml
docs/cfg/: buildprofiles.xml  glossary.xml
docs/topics/: API-reference.md  Configuration.md  Contributing-guide.md  Development-guide.md  General questions.md  Installation-guide.md  Testing-Guide.md  Use-Cases.md  starter.md
src/aioarxiv/: config.py  exception.py
src/aioarxiv/client/: arxiv_client.py  downloader.py
src/aioarxiv/models/: __init__.py
src/aioarxiv/utils/: __init__.py  log.py  parser.py  rate_limiter.py  session.py
tests/: test_models.py
tests/data/: test_parser.xml
tests/test_client/: test_client.py  test_downloader.py
tests/test_utils/: test_parser.py  test_rate_limiter.py  test_session.py  test_utils.py
tests/utils/: test_rate_limiter.py  test_session.py
