[project]
name = "aioarxiv"
version = "0.2.0"
description = "arxiv Parse library"
authors = [
    { name = "BalconyJH", email = "balconyjh@gmail.com" },
]
dependencies = [
    "loguru~=0.7",
    "pydantic>=2.9.2",
    "aiohttp>=3.10.10",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
    "platformdirs>=4.3.6",
    "tzdata>=2024.2",
    "pydantic-settings>=2.7.1",
    "defusedxml>=0.7.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
package = { include = ["aioarxiv"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov-report=term-missing --ignore=.venv/"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
exclude = ["typings/*/"]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "PLE",   # Pylint errors
    "NPY",   # NumPy-specific rules
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "B008",   # function-call-in-default-argument
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "ISC001"  # single-line-implicit-string-concatenation
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
length-sort = false
force-sort-within-sections = true
known-first-party = ["aioarxiv", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
venv = ".venv"
executionEnvironments = [
    { root = "./tests", extraPaths = [
        "./",
    ] },
    { root = "./" },
]
typeCheckingMode = "standard"
disableBytesTypePromotions = true

[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest-cov~=5.0",
    "pytest-xdist~=3.6",
    "pytest-asyncio~=0.23",
    "pytest-mock>=3.14.0",
]
dev = [
    "pyright[nodejs]>=1.1.391",
    "ruff>=0.8",
    "pre-commit~=4.0",
    "bump-my-version>=0.28.1",
]

[tool.coverage.run]
omit = [
    ".venv/*",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"